# Lenanad_site

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  temp.py
backend/: .gitignore  COMMAND.MD  Dockerfile  backup-db.sh  docker-compose.yaml  init-db.sql  manage.py  requirements.txt
backend/backend/: settings.py  urls.py
backend/home/: admin.py  middleware.py  models.py  urls.py  views.py
backend/home/migrations/: 0001_initial.py
backend/nginx/: nginx-ssl.conf  nginx.conf  nginx.conf.template  nginx_startup.conf.template
backend/particles/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/particles/migrations/: 0001_initial.py  0002_remove_partiallypickedassembly_products_data_and_more.py  0003_partiallypickedassembly_updated_at_and_more.py  0004_partiallypickedassembly_black_list.py  0005_partiallypickedproduct_black_list.py
backend/static/assets/js/: main.js  popper.min.js  style-picker.js
backend/templates/: assembly_detail.html  base.html  main_page.html  particles.html
backend/templates/auth/: login.html
backend/templates/errors/: 403.html  404.html  500.html
backend/templates/includes/: footer.html  nav.html  sidebar.html  theme_modal.html
backend/templates/particles/: assembly_detail.html  dashboard.html  particles.html
backend/templates/users/: profile_edit.html
backend/users/: admin.py  forms.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_city_country_alter_store_city.py
nginx/: nginx.conf
nginx/conf.d/: lemanapro.conf
