[tool.poetry]
name = "mycego-online"
version = "0.1.0"
description = ""
authors = ["mycego"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.9"
djangorestframework = "^3.15.2"
django-apscheduler = "^0.6.2"
django-cors-headers = "^4.4.0"
django-debug-toolbar = "^4.4.6"
django-drf-filepond = "^0.5.0"
django-jazzmin = "^3.0.0"
mysqlclient = "^2.2.4"
django-simple-history = "^3.7.0"
django-storages = "^1.14.4"
django-widget-tweaks = "^1.5.0"
environs = "^11.0.0"
django-dbbackup = "^4.1.0"
loguru = "^0.7.2"
pandas = "^2.2.2"
numpy = "^2.0.1"
pillow = "^10.4.0"
setuptools = "^72.2.0"
python-barcode = "^0.15.1"
reportlab = "^4.2.2"
aiohttp = "^3.10.3"
openpyxl = "^3.1.5"
aiofiles = "^24.1.0"
gunicorn = "^23.0.0"
boto3 = "^1.36.3"
crispy-bootstrap5 = "2024.10"
django-crispy-forms = "2.3"
PyPDF2 = "3.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
